code-challenge-back-end/openshift/base/services.api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: photo-sharing
  name: photo-sharing-api
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deployment: photo-sharing-api
  sessionAffinity: None
  type: ClusterIP
